package Commons

class AddEditUserPageTags {

    val addEditUserScreen = "AddEditUserScreen"

    val firstName = "First Name"

    val lastName = "Last Name"

    val saveBtn = "save"

    companion object{
        val shared = AddEditUserPageTags()
    }
}