package Commons

class UserHomePageTags {

    val userHomeScreen = "UserHomeScreen"

    val backBtn = "BackBtn"

    val connectionBtn = "ConnectionBtn"

    val editBtn = "EditProfile"

    val saveBtn = "Save"

    val restartBtn = "Restart"

    val resetBtn = "Reset"

    val historyBtn = "History"

    companion object{
        val shared = UserHomePageTags()
    }


}