package Commons


class LoginTags {

    val splashScreen = "SplashScreenPage"
    val loginScreen = "login"

    //Items Tags

    val phoneTextField = "phoneTextField"
    var otpPinTextField = "otpOrPinTextField"
    var loginContinueBtn = "loginNow"

    companion object{
        val shared = LoginTags()
    }

}